--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
         <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
         <!-- Collapse button -->
         <button class="navbar-toggler" type="button">
-            <div class="animated-icon1">
+            <div class="menu-icon">
                 <span></span>
-                <span class="hidden"></span>
                 <span></span>
             </div>
         </button>
