Added footer map

--- a/index.html
+++ b/index.html
@@ -70,12 +70,6 @@
 
     <!-- Page Content -->
     <div id="page-content-wrapper">
-        <button type="button" class="hamburger animated fadeInLeft is-closed" data-toggle="offcanvas">
-            <span class="hamb-top"></span>
-            <span class="hamb-middle"></span>
-            <span class="hamb-bottom"></span>
-        </button>
-
         <!-- Start Banner Area -->
         <section id="home" class="banner-area">
             <div class="container">
@@ -181,18 +175,20 @@
             </div>
             <img class="background-dw" src="img/Shape4.png">
         </footer>
+        <!--End of footer-->
         <div id="pattern" class="pattern">
             <div class="map">
-                <div class="span4">
-                    <p>SC STRESSLESS SRL</p>
-                    <p>Cluj Napoca, Al Baita 10</p>
-                    <hr>
-                    <p>CUI 37745390<p>
-                    <p>J12/3615/2017<p>
+                <div class="map-overlay">
+                    <div class="contact-info">
+                        <p>SC STRESSLESS SRL</p>
+                        <p>Cluj Napoca, Al Baita 10</p>
+                        <hr>
+                        <p>CUI 37745390<p>
+                        <p>J12/3615/2017<p>
+                    </div>
                 </div>
             </div>
         </div>
-        <!--End of footer-->
 
     </div>
     <!-- /#page-content-wrapper -->
