added favicon; removed not used mail chimp scripts; styled map

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <!-- Mobile Specific Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" href="img/logo.png">
     <!-- Author Meta -->
     <meta name="author" content="">
     <!-- Meta Description -->
@@ -42,7 +42,7 @@
 
     <!-- Sidebar -->
     <nav id="menu" class="navbar navbar-default navbar-light amber lighten-4 mb-4 fixed-top">
-        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
+        <a class="navbar-brand" href="/"><img src="img/logo.png" alt=""></a>
         <!-- Collapse button -->
         <button class="navbar-toggler" type="button">
             <div class="menu-icon">
