--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Mobile Specific Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" href="img/logo.png">
     <!-- Author Meta -->
     <meta name="author" content="">
     <!-- Meta Description -->
@@ -24,22 +24,13 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
-
-    <!-- MailChimp setup-->
-    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-    <style type="text/css">
-        #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-        /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-           We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-    </style>
 </head>
 
 <body>
 <div id="wrapper">
     <div class="overlay"></div>
-    <!-- Sidebar -->
     <nav id="menu" class="navbar navbar-default navbar-light amber lighten-4 mb-4 fixed-top">
-        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
+        <a class="navbar-brand" href="/"><img src="img/logo.png" alt=""></a>
         <!-- Collapse button -->
         <button class="navbar-toggler" type="button">
             <div class="menu-icon">
@@ -65,7 +56,6 @@
             <!-- Links -->
 
         </div>
-        <!-- Collapsible content -->
     </nav>
 
     <!-- Page Content -->
@@ -191,10 +181,7 @@
         </div>
 
     </div>
-    <!-- /#page-content-wrapper -->
-
 </div>
-<!-- /#wrapper -->
 
 
 <!-- Scripts -->
@@ -203,9 +190,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
-<!--mc_embed_signup-->
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-<!--End mc_embed_signup-->
 
 </body>
 </html>
