Small changes overall

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="container">
                     <div class="row">
-                        <div class="founder col-sm">
+                        <div class="founder col-md">
                             <img src="img/m-icon.png">
                             <h3>Marius Rus</h3>
                             <h4>Founder, CEO</h4>
@@ -111,7 +111,7 @@
                                 <li>15 years consulting, investments</li>
                             </ul>
                         </div>
-                        <div class="founder col-sm">
+                        <div class="founder col-md">
                             <img src="img/a-icon.png">
                             <h3>Adina Rus</h3>
                             <h4>Founder, CSO</h4>
@@ -123,7 +123,7 @@
                                 <li> Lecturer BBU Cluj-Napoca</li>
                             </ul>
                         </div>
-                        <div class="founder col-sm">
+                        <div class="founder col-md">
                             <img src="img/f-icon.png">
                             <h3>Florin Lazar</h3>
                             <h4>CTO</h4>
