--- a/description.html
+++ b/description.html
@@ -67,7 +67,9 @@
                 <div class="col">
                     <p><span>TULLY</span> is a new paradigm in ADHD treatment, integrating the well-established principles of biofeedback in a manner that children can easily engage with.</p>
                     <p>The discrete sensors in the bracelet monitors the level of agitation a child is experiencing. Real time data processing allows, for the first time, a perfectly timed behavioral modification intervention, with much better results than dealing with the post factum effects of an unchecked hyperactivity event.</p>
-                    <button type="button" class="btn btn-primary pl-5 pr-5 btn-lg">Buy Now!</button>
+                    <button type="button" class="btn btn-primary pl-5 pr-5 btn-lg">
+                        <a href="/contact.html">Buy Now!</a>
+                    </button>
                 </div>
                 <div class="col offset-2">
                     <img class="d-illustration" src="img/h-illustration.png">
