--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
                     <div class="faq-content col-lg-12 col-md-12">
                         <div class="story-content">
                             <p>TULLY is a wearable device helping children learn how to control themselves and cope with emotional flares and diminished attention problems. Our initial focus is on the hyperactivity aspect, where Tully’s biofeedback and analytic algorithms can make an important difference in the child’s emotional and behavioral balance and allow them to reach their full academic potential.</p>
-                            <button type="button" class="btn btn-primary pl-5 pr-5 btn-lg">I want to learn more</button>
+                            <button type="button" class="btn btn-primary pl-5 pr-5 btn-lg">
+                                <a href="/description.html">
+                                    I want to learn more
+                                </a>
+                            </button>
                         </div>
                     </div>
                 </div>
