--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                                 <li>Strategy, Product, Finance</li>
                                 <li>UC Berkeley MBA</li>
                                 <li>15 years consulting, investments</li>
+                                <li><a target="_blank" href="www.linkedin.com/in/mariusrus">Linkedin</a></li>
                             </ul>
                         </div>
                         <div class="founder col-md">
@@ -125,6 +126,7 @@
                                 <li>PhD in Economics</li>
                                 <li>MA is Psychology</li>
                                 <li> Lecturer BBU Cluj-Napoca</li>
+                                <li><a target="_blank" href="linkedin.com/in/adinarus">Linkedin</a></li>
                             </ul>
                         </div>
                         <div class="founder col-md">
@@ -136,6 +138,7 @@
                                 <li>Hardware</li>
                                 <li>16 years electronic design</li>
                                 <li>Engineering lead at AROBS</li>
+                                <li><a target="_blank" href="linkedin.com/in/florin-lazar-95537523">Linkedin</a></li>
                             </ul>
                         </div>
                     </div>
