--- a/contact.html
+++ b/contact.html
@@ -59,10 +59,10 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/description">Buy</a>
+                    <a class="nav-link" href="/description.html">Buy</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/contact">Contact</a>
+                    <a class="nav-link" href="/contact.html">Contact</a>
                 </li>
             </ul>
             <!-- Links -->
