--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/description">Buy</a>
+                    <a class="nav-link" href="/description.html">Buy</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact</a>
+                    <a class="nav-link" href="/contact.html">Contact</a>
                 </li>
             </ul>
             <!-- Links -->
