New background for contact page and small modifications on the likedin links

--- a/index.html
+++ b/index.html
@@ -111,9 +111,11 @@
 
                             <ul>
                                 <li>Strategy, Product, Finance</li>
-                                <li>UC Berkeley MBA</li>
-                                <li>15 years consulting, investments</li>
-                                <li><a target="_blank" href="www.linkedin.com/in/mariusrus">Linkedin</a></li>
+                                <li>
+                                    <a target="_blank" href="https://www.linkedin.com/in/mariusrus">
+                                        <i class="fab fa-linkedin-in"></i>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                         <div class="founder col-md">
@@ -123,10 +125,11 @@
 
                             <ul>
                                 <li>Psychology, Data Analysis</li>
-                                <li>PhD in Economics</li>
-                                <li>MA is Psychology</li>
-                                <li> Lecturer BBU Cluj-Napoca</li>
-                                <li><a target="_blank" href="linkedin.com/in/adinarus">Linkedin</a></li>
+                                <li>
+                                    <a target="_blank" href="https://www.linkedin.com/in/adinarus">
+                                        <i class="fab fa-linkedin-in"></i>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                         <div class="founder col-md">
@@ -136,9 +139,11 @@
 
                             <ul>
                                 <li>Hardware</li>
-                                <li>16 years electronic design</li>
-                                <li>Engineering lead at AROBS</li>
-                                <li><a target="_blank" href="linkedin.com/in/florin-lazar-95537523">Linkedin</a></li>
+                                <li>
+                                    <a target="_blank" href="https://www.linkedin.com/in/florin-lazar-95537523">
+                                        <i class="fab fa-linkedin-in"></i>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -154,7 +159,7 @@
                 <div class="title">
                     <h1 class="team text-uppercase">get in touch</h1>
                     <h3>+40744709189</h3>
-                    <h3>stressless@gmail.com</h3>
+                    <h3>marius@mytully.com</h3>
                 </div>
                 <div class="social">
                     <div class="row">
